retrive card to show display data from local storage

--- a/src/component/Shop/Shop.css
+++ b/src/component/Shop/Shop.css
@@ -17,5 +17,8 @@
 
 
 .order-container{
-    border: 2px solid lightseagreen;
+    background-color: rgba(255, 153, 0, 0.3);
+    height: 400px;
+    position: sticky;
+    top: 0;
 }
