xplore react router and implement order and remove order

--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -5,7 +5,9 @@
     align-items: center;
     height: 60px;
     padding: 0 25px;
-   
+    /* position: sticky;
+    top: 0;
+    */
 }
 
 .navbar a {
