--- a/src/component/Cart/Cart.css
+++ b/src/component/Cart/Cart.css
@@ -15,3 +15,38 @@
     font-size: 16px;
     font-weight: bold;
 }
+
+.clear-cart-btn {
+    background: #FF3030;
+    border-radius: 4px;
+    width: 300px;
+    height: 40px;
+    margin: 10px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 7px;
+    color: white;
+    letter-spacing: 0.0015em;
+    font-weight: 400;
+    font-size: 15px;
+    border: none;
+
+}
+
+.review-proceed-btn {
+    background: #FF9900;
+    border-radius: 4px;
+    width: 300px;
+    height: 40px;
+    margin: 10px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 7px;
+    color: white;
+    letter-spacing: 0.0015em;
+    font-weight: 400;
+    font-size: 15px;
+    border: none;
+}
